--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -5,6 +5,7 @@
 
 .team__list {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
 }
 
@@ -19,12 +20,18 @@
 }
 
 .team__item {
-    width: 270px;
+    width: 100%;
     text-align: center;
     background: var(--second-title-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    @include tablet {
+            width: calc((100% - 30px) / 2);
+        }
+        @include desktop {
+            width: calc((100% - 90px) / 4);
+        }
 }
 
 .team__card {
