--- a/sass/layout/_activity.scss
+++ b/sass/layout/_activity.scss
@@ -1,3 +1,17 @@
+.hidden {
+    @media screen and (max-width: 1200px) {
+        position: absolute;
+        white-space: nowrap;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+        border: 0;
+        padding: 0;
+        clip: rect(0 0 0 0);
+        clip-path: inset(50%);
+        margin: -1px;
+    }
+}
 .activity {
     padding-top: 0;
     background-color: var(--first-bg-color);
