--- a/sass/layout/_specificity.scss
+++ b/sass/layout/_specificity.scss
@@ -2,6 +2,13 @@
   padding-top: 60px;
   padding-bottom: 60px;
 }
+.section.specificity {
+  @include desktop {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
+}
+
 .specificity__list {
   display: flex;
   flex-wrap: wrap;
