--- a/css/main.css
+++ b/css/main.css
@@ -746,9 +746,21 @@ a {
 
 .projects-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
-  justify-content: center;
-  margin-bottom: 50px;
+  justify-content: flex-start;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .projects-list {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .projects-list {
+    margin-bottom: 50px;
+  }
 }
 
 .projects-btn {
@@ -786,7 +798,17 @@ a {
 }
 
 .portfolio-item {
-  width: 370px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-item {
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .portfolio-name {
