--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,173 +1,204 @@
 .footer {
-    background-color: var(--sec-bg-color);
-    padding: 60px 0;
-    .container {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: baseline;
-            padding: 0;
-            justify-content: center;
+  background-color: var(--sec-bg-color);
+  padding: 60px 0;
+  .container {
+    text-align: center;
+    @include tablet {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: baseline;
+      justify-content: center;
     }
+    @include desktop {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: baseline;
+      text-align: start;
+    }
+  }
 }
 .footer__address {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    @include desktop {
-    text-align: start;
-    }
+  margin-bottom: 60px;
+  @include tablet {
+    margin-bottom: 0;
+  }
 }
 .footer__logo {
-    display: inline-block;
-    margin-bottom: 20px;
+  display: inline-block;
+  margin-bottom: 20px;
 }
 .logo {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 .logo__studio--accent {
-    color: var(--second-title-color);
+  color: var(--second-title-color);
 }
 
 .address__text {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--second-title-color);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--second-title-color);
 }
 
 .address__list {
-    margin-top: 9px;
+  margin-top: 9px;
 }
 
 .address__tel {
-    margin-top: 9px;
+  margin-top: 9px;
 }
 
 .address__contact {
-    display: inline-block;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-            color: var(--accent-color);
-}
+  display: inline-block;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
-// .login {
-//     margin-left: 70px;
-// }
+.login {
+  margin-bottom: 60px;
+  @include tablet {
+    margin-left: 165px;
+    margin-bottom: 0;
+  }
+  @include desktop {
+    margin-left: 70px;
+  }
+}
 
 .login__title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--second-title-color);
-    margin-bottom: 20px;
-    text-align: left;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--second-title-color);
+  margin-bottom: 20px;
 }
 
 .login__soc {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
 
 .login__link {
-    background: rgba(255, 255, 255, 0.1);
-    fill: var(--second-title-color);
-    display: flex;
-    width: 44px;
-    height: 44px;
-    border-radius: 44px;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-            background-color: var(--accent-color);
-}
-}
-
-.subscribe__form {
-    display: flex;
-    width: 570px;
-    height: 50px;
+  background: rgba(255, 255, 255, 0.1);
+  fill: var(--second-title-color);
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 44px;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
 
 .subscribe {
+  @include tablet {
+    margin-top: 60px;
+  }
+  @include desktop {
     margin-left: auto;
+  }
 }
-
+.subscribe__form {
+  width: 100%;
+  //   height: 50px;
+  @include desktop {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+  }
+}
 .subscribe__title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    color: var(--first-bg-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  color: var(--first-bg-color);
 }
 
 .subscribe__email {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 14px 16px 14px 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  align-items: center;
+  letter-spacing: 0.03em;
+  outline: none;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  &:focus {
+    border-color: var(--accent-color);
+  }
+  @include tablet {
     display: block;
+    width: 450px;
+  }
+  @include desktop {
+    margin-bottom: 0;
     width: 358px;
-    padding: 14px 16px 14px 16px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.25;
-    align-items: center;
-    letter-spacing: 0.03em;
-    outline: none;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: rgba(255, 255, 255, 0.6);
-    background-color: transparent;
-    &:focus {
-            border-color: var(--accent-color);
-}
+  }
 }
 
 .subscribe__btn {
-    display: flex;
+  display: inline-flex;
+  padding: 9px 28px 9px 29px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  color: var(--first-bg-color);
+  background-color: var(--accent-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  &:hover,
+  &:focus {
+    background-color: var(--btn-hover-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
+  @include desktop {
     margin-left: 12px;
-    padding: 9px 28px 9px 29px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    align-items: center;
-    justify-content: center;
-    border-radius: 4px;
-    border: 1px solid transparent;
-    color: var(--first-bg-color);
-    background-color: var(--accent-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: pointer;
-    &:hover,
-    &:focus {
-            background-color: var(--btn-hover-color);
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+  }
 }
 
 .subscribe__icon {
-    width: 24px;
-    height: 24px;
-    margin-left: 10px;
-    fill: var(--second-title-color);
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+  fill: var(--second-title-color);
 }
