--- a/css/main.css
+++ b/css/main.css
@@ -406,26 +406,52 @@ a {
 .general {
   background-color: var(--sec-bg-color);
   text-align: center;
-  padding: 200px 0;
+  padding: 118px 0;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1600px;
-  height: 600px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
 }
+.general .container {
+  max-width: 360px;
+}
+@media screen and (min-width: 1200px) {
+  .general .container {
+    max-width: 696px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .general {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .general {
+    height: 600px;
+    padding: 200px 0;
+    max-width: 1600px;
+  }
+}
 
 .general__title {
-  margin: 0 auto 30px;
-  max-width: 696px;
+  margin-bottom: 30px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.5;
+  font-size: 26px;
+  line-height: 1.62;
   text-transform: uppercase;
   letter-spacing: 0.06em;
   color: var(--second-title-color);
+}
+@media screen and (min-width: 1200px) {
+  .general__title {
+    font-size: 44px;
+    line-height: 1.36;
+    text-transform: uppercase;
+    letter-spacing: 0.06em;
+  }
 }
 
 .general__btn {
