--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,98 +1,104 @@
 .header {
-    background-color: var(--first-bg-color);
-    border-bottom: 1px solid #ececec;
+  background-color: var(--first-bg-color);
+  border-bottom: 1px solid #ececec;
 }
 
 .header-content {
-    display: flex;
-    align-items: center;
+  position: relative;
+  display: flex;
+  align-items: center;
 }
-
+.navigation {
+  display: flex;
+  align-items: center;
+}
 .navigation__list {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .navigation__item:not(:last-child) {
-    margin-right: 50px;
+  margin-right: 50px;
 }
 
 .contacts {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-    gap: 50px;
-}
-
-.navigation {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  gap: 50px;
 }
 .header__logo {
+  margin-right: 87px;
+  padding: 16px 0;
+  @include tablet {
+    padding: 26px 0;
+  }
+  @include desktop {
     margin-right: 93px;
     align-items: center;
+  }
 }
 .logo {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: var(--accent-color);
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
 }
 .logo__studio {
-    color: var(--title-color);
+  color: var(--title-color);
 }
 
 .navigation__link {
-    display: block;
-    position: relative;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--title-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-            color: var(--accent-color);
-}
+  display: block;
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--title-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .navigation__link.current {
-    color: var(--accent-color);
-    &::after {
-            content: "";
-            position: absolute;
-            display: block;
-            width: 100%;
-            height: 4px;
-            left: 0;
-            bottom: -1px;
-            border-radius: 2px;
-            background-color: var(--accent-color);
-}
+  color: var(--accent-color);
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+  }
 }
 
 .contacts__mail,
 .contacts__tel {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--text-color);
-    display: flex;
-    align-items: center;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-            color: var(--accent-color);
-}
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .contact__icon {
-    fill: currentColor;
-    margin-right: 10px;
+  fill: currentColor;
+  margin-right: 10px;
 }
