--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,23 +1,26 @@
 body {
-    font-family: Roboto, sans-serif;
-    color: #212121;
+  font-family: Roboto, sans-serif;
+  color: #212121;
 }
 
 img {
-    display: block;
-    min-width: 100%;
-    height: auto;
-    width: 100%;
+  display: block;
+  min-width: 100%;
+  height: auto;
+  width: 100%;
 }
 
 .list {
-    list-style: none;
+  list-style: none;
 }
 
 .link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .section {
-    padding: 94px 0;
+  padding: 94px 0;
+}
+.no-scroll {
+  overflow: hidden;
 }
