--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -13,7 +13,7 @@
   align-items: center;
 }
 .navigation__list {
-  display: flex;
+  display: none;
   align-items: center;
 }
 
@@ -22,7 +22,7 @@
 }
 
 .contacts {
-  display: flex;
+  display: none;
   align-items: center;
   margin-left: auto;
   gap: 50px;
@@ -97,8 +97,108 @@
     color: var(--accent-color);
   }
 }
-
 .contact__icon {
   fill: currentColor;
   margin-right: 10px;
+}
+.mob-menu-open {
+  margin-left: auto;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
+.mob-menu-close {
+  display: block;
+  border: none;
+  background-color: transparent;
+  margin-left: auto;
+  padding: 0;
+}
+.mob-menu__icon-open,
+.mob-menu-close {
+  fill: #212121;
+}
+.mob-menu {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: #fff;
+  top: 0;
+  z-index: 2;
+  padding-top: 10px;
+  padding-bottom: 48px;
+  > .container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: space-between;
+    overflow: auto;
+    align-items: stretch;
+  }
+}
+.mob-nav__item {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
+  @include mobile {
+    font-size: 40px;
+  }
+}
+.mob-nav__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mob-contacts__tel {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  margin-bottom: 32px;
+  @include mobile {
+    font-size: 34px;
+  }
+}
+.mob-contacts_mail {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+  margin-bottom: 64px;
+  @include mobile {
+    font-size: 24px;
+  }
+}
+.mob-soc__link {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  @include mobile {
+    font-size: 18px;
+  }
+}
+.mob-soc__link:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 5px;
+  padding-left: 5px;
+  @include mobile {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+}
+.mob-soc__link + .last {
+  padding-left: 5px;
+  @include mobile {
+    padding-left: 10px;
+  }
+}
+.mob-menu-top {
+  margin-left: 25px;
+}
+.mob-menu-bottom {
+  margin-left: 25px;
 }
