--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -119,7 +119,7 @@
   fill: #212121;
 }
 .mob-menu {
-  position: fixed;
+  position: absolute;
   width: 100vw;
   height: 100vh;
   background-color: #fff;
@@ -131,7 +131,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    justify-content: space-between;
+    justify-content: spac e-between;
     overflow: auto;
     align-items: stretch;
   }
