--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -20,18 +20,29 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 450px;
-  height: 609px;
+  width: 310px;
+  height: 530px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: var(--first-bg-color);
-  padding: 40px;
-  .backdrop.is-hidden & {
-    transform: translate(-50%, -50%) scale(0);
+  padding: 10px;
+  @include mobile {
+    width: 450px;
+    height: 609px;
+    padding: 40px;
+  }
+  @include tablet {
+    width: 450px;
+    height: 609px;
+    padding: 40px;
   }
   @include desktop {
     width: 528px;
     height: 581px;
+    padding: 40px;
+  }
+  .backdrop.is-hidden & {
+    transform: translate(-50%, -50%) scale(0);
   }
 }
 .modal-close {
@@ -54,16 +65,30 @@
     fill: var(--accent-color);
   }
 }
-
+.modal-form {
+  display: inline-block;
+  margin-top: 12px;
+  width: 100%;
+}
 .modal-title {
   text-align: center;
   font-weight: 700;
-  font-size: 20px;
-  line-height: 1.5;
+  font-size: 14px;
+  line-height: 1.65;
   letter-spacing: 0.03em;
   color: var(--title-color);
-  margin-bottom: 12px;
+  //   margin-bottom: 12px;
+  @include mobile {
+    font-size: 20px;
+    line-height: 1.5;
+  }
+  @include tablet {
+    font-size: 20px;
+    line-height: 1.5;
+  }
+
   @include desktop {
+    font-size: 20px;
     line-height: 1.15;
   }
 }
@@ -102,17 +127,28 @@
 }
 
 .modal-fields {
-  margin-top: 20px;
+  margin-top: 10px;
+  @include mobile {
+    margin-top: 20px;
+  }
 }
 
 .modal-label {
   display: block;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 10px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: var(--text-color);
   margin-bottom: 4px;
+  @include mobile {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+  @include desktop {
+    font-size: 12px;
+    line-height: 1.16;
+  }
 }
 
 .modal-text {
@@ -139,12 +175,16 @@
   display: flex;
   align-items: center;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
+  font-size: 9px;
+  line-height: 1;
   letter-spacing: 0.03em;
   color: var(--text-color);
   cursor: pointer;
   justify-content: center;
+  @include mobile {
+    font-size: 12px;
+    line-height: 1.16;
+  }
   @include desktop {
     font-size: 14px;
     line-height: 1.71;
