--- a/css/main.css
+++ b/css/main.css
@@ -170,12 +170,6 @@ a {
   fill: var(--accent-color);
 }
 
-.modal-form {
-  display: inline-block;
-  margin-top: 12px;
-  width: 100%;
-}
-
 .modal-title {
   text-align: center;
   font-weight: 700;
@@ -183,6 +177,7 @@ a {
   line-height: 1.65;
   letter-spacing: 0.03em;
   color: var(--title-color);
+  margin-bottom: 12px;
 }
 @media screen and (min-width: 480px) {
   .modal-title {
@@ -283,8 +278,13 @@ a {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
+
 .modal-text:focus {
   border-color: var(--accent-color);
+}
+
+.modal-contract {
+  color: var(--accent-color);
 }
 
 .check-text {
@@ -310,6 +310,7 @@ a {
     line-height: 1.71;
   }
 }
+
 .check-text span {
   width: 16px;
   height: 15px;
@@ -321,37 +322,23 @@ a {
   align-items: center;
   justify-content: center;
 }
-.modal-check:checked + .check-text {
-  background-color: var(--accent-color);
-  border: none;
-  box-shadow: none;
-}
-.modal-check:focus + .check-text {
-  border-color: var(--accent-color);
-}
-
-.modal-contract {
-  color: var(--accent-color);
-}
-
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
-}
 
 .check-icon {
   fill: transparent;
 }
+
+.modal-check:checked + .check-text span {
+  background-color: var(--accent-color);
+  border: none;
+  box-shadow: none;
+}
+
 .modal-check:checked + .check-text .check-icon {
   fill: var(--second-title-color);
+}
+
+.modal-check:focus + .check-text span {
+  border-color: var(--accent-color);
 }
 
 .button-submit {
@@ -376,6 +363,19 @@ a {
 .button-submit:hover, .button-submit:focus {
   background-color: var(--btn-hover-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 
 .header {
