--- a/css/main.css
+++ b/css/main.css
@@ -494,6 +494,7 @@ a {
 
 .mob-menu-open {
   margin-left: auto;
+  margin-top: 10px;
   border: none;
   background-color: transparent;
   padding: 0;
@@ -504,6 +505,8 @@ a {
   border: none;
   background-color: transparent;
   margin-left: auto;
+  margin-top: 10px;
+  margin-right: 15px;
   padding: 0;
 }
 
@@ -513,7 +516,7 @@ a {
 }
 
 .mob-menu {
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   background-color: #fff;
@@ -525,10 +528,12 @@ a {
 .mob-menu > .container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  justify-content: spac e-between;
+  height: 100%;
+  justify-content: space-between;
   overflow: auto;
   align-items: stretch;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .mob-nav__item {
@@ -610,12 +615,16 @@ a {
   }
 }
 
+.mob-menu-bottom .first {
+  padding-left: 0;
+}
+
 .mob-menu-top {
-  margin-left: 25px;
+  margin-left: 40px;
 }
 
 .mob-menu-bottom {
-  margin-left: 25px;
+  margin-left: 40px;
 }
 
 .general {
