--- a/css/main.css
+++ b/css/main.css
@@ -389,6 +389,48 @@ a {
   align-items: center;
 }
 
+.header__logo {
+  margin-right: 93px;
+  padding: 16px 0;
+}
+@media screen and (min-width: 768px) {
+  .header__logo {
+    padding: 24px 0;
+    margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    margin-right: 93px;
+    padding: 24px 0;
+  }
+}
+
+.logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
+@media screen and (min-width: 768px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.16;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
+
+.logo__studio {
+  color: var(--title-color);
+}
+
 .navigation {
   display: flex;
   align-items: center;
@@ -397,46 +439,32 @@ a {
 .navigation__list {
   display: none;
   align-items: center;
+  gap: 50px;
 }
-
-.navigation__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .navigation__list {
+    display: flex;
+  }
 }
 
 .contacts {
   display: none;
-  align-items: center;
   margin-left: auto;
-  gap: 50px;
-}
-
-.header__logo {
-  margin-right: 87px;
-  padding: 16px 0;
 }
 @media screen and (min-width: 768px) {
-  .header__logo {
-    padding: 26px 0;
+  .contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0;
   }
 }
 @media screen and (min-width: 1200px) {
-  .header__logo {
-    margin-right: 93px;
+  .contacts {
+    flex-direction: row;
     align-items: center;
+    gap: 50px;
   }
-}
-
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
-}
-
-.logo__studio {
-  color: var(--title-color);
 }
 
 .navigation__link {
@@ -455,10 +483,10 @@ a {
   color: var(--accent-color);
 }
 
-.navigation__link.current {
+.navigation__link .current {
   color: var(--accent-color);
 }
-.navigation__link.current::after {
+.navigation__link .current::after {
   content: "";
   position: absolute;
   display: block;
@@ -486,10 +514,33 @@ a {
 .contacts__tel:focus {
   color: var(--accent-color);
 }
+@media screen and (min-width: 768px) {
+  .contacts__mail,
+.contacts__tel {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 12px;
+    line-height: 1.16;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__mail,
+.contacts__tel {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
 
 .contact__icon {
   fill: currentColor;
   margin-right: 10px;
+}
+@media screen and (min-width: 768px) {
+  .contact__icon {
+    margin-right: 8px;
+  }
 }
 
 .mob-menu-open {
@@ -498,6 +549,16 @@ a {
   border: none;
   background-color: transparent;
   padding: 0;
+}
+@media screen and (min-width: 768px) {
+  .mob-menu-open {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mob-menu-open {
+    display: none;
+  }
 }
 
 .mob-menu-close {
@@ -508,6 +569,16 @@ a {
   margin-top: 10px;
   margin-right: 15px;
   padding: 0;
+}
+@media screen and (min-width: 768px) {
+  .mob-menu-close {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mob-menu-close {
+    display: none;
+  }
 }
 
 .mob-menu__icon-open,
@@ -524,6 +595,11 @@ a {
   z-index: 2;
   padding-top: 10px;
   padding-bottom: 48px;
+}
+.mob-menu.is-hidden {
+  opacity: 0;
+  transform: translateX(100%);
+  pointer-events: none;
 }
 .mob-menu > .container {
   display: flex;
@@ -556,14 +632,14 @@ a {
 .mob-contacts__tel {
   font-weight: 500;
   font-size: 22px;
-  line-height: 1.17;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: #2196f3;
   margin-bottom: 32px;
 }
 @media screen and (min-width: 480px) {
   .mob-contacts__tel {
-    font-size: 34px;
+    font-size: 24px;
   }
 }
 
