--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,6 +8,37 @@
   display: flex;
   align-items: center;
 }
+.header__logo {
+  margin-right: 93px;
+  padding: 16px 0;
+  @include tablet {
+    padding: 24px 0;
+    margin-right: 88px;
+  }
+  @include desktop {
+    margin-right: 93px;
+    padding: 24px 0;
+  }
+}
+.logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+  @include tablet {
+    font-size: 26px;
+    line-height: 1.16;
+  }
+  @include desktop {
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
+.logo__studio {
+  color: var(--title-color);
+}
 .navigation {
   display: flex;
   align-items: center;
@@ -15,41 +46,31 @@
 .navigation__list {
   display: none;
   align-items: center;
+  gap: 50px;
+  @include tablet {
+    display: flex;
+  }
 }
 
-.navigation__item:not(:last-child) {
-  margin-right: 50px;
-}
+// .navigation__item:not(:last-child) {
+//   margin-right: 50px;
+// }
 
 .contacts {
   display: none;
-  align-items: center;
   margin-left: auto;
-  gap: 50px;
-}
-.header__logo {
-  margin-right: 87px;
-  padding: 16px 0;
   @include tablet {
-    padding: 26px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0;
   }
   @include desktop {
-    margin-right: 93px;
+    flex-direction: row;
     align-items: center;
+    gap: 50px;
   }
 }
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
-}
-.logo__studio {
-  color: var(--title-color);
-}
-
 .navigation__link {
   display: block;
   position: relative;
@@ -67,7 +88,7 @@
   }
 }
 
-.navigation__link.current {
+.navigation__link .current {
   color: var(--accent-color);
   &::after {
     content: "";
@@ -96,18 +117,38 @@
   &:focus {
     color: var(--accent-color);
   }
+  @include tablet {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 12px;
+    line-height: 1.16;
+  }
+  @include desktop {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
 .contact__icon {
   fill: currentColor;
   margin-right: 10px;
+  @include tablet {
+    margin-right: 8px;
+  }
 }
-
 .mob-menu-open {
   margin-left: auto;
   margin-top: 10px;
   border: none;
   background-color: transparent;
   padding: 0;
+  @include tablet {
+    display: none;
+  }
+  @include desktop {
+    display: none;
+  }
 }
 .mob-menu-close {
   display: block;
@@ -117,6 +158,12 @@
   margin-top: 10px;
   margin-right: 15px;
   padding: 0;
+  @include tablet {
+    display: none;
+  }
+  @include desktop {
+    display: none;
+  }
 }
 .mob-menu__icon-open,
 .mob-menu-close {
@@ -132,6 +179,11 @@
   z-index: 2;
   padding-top: 10px;
   padding-bottom: 48px;
+  &.is-hidden {
+    opacity: 0;
+    transform: translateX(100%);
+    pointer-events: none;
+  }
   > .container {
     display: flex;
     flex-direction: column;
@@ -159,12 +211,12 @@
 .mob-contacts__tel {
   font-weight: 500;
   font-size: 22px;
-  line-height: 1.17;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: #2196f3;
   margin-bottom: 32px;
   @include mobile {
-    font-size: 34px;
+    font-size: 24px;
   }
 }
 .mob-contacts_mail {
